# credit-risk-pipeline

./: .gitignore  LICENSE  README.md  main.py  master-plan.txt  pyproject.toml
EDA/: EDA.ipynb
backend/: main.py  requirements.txt  test_load.py
data-mining/: EDA+FE+cleaning.ipynb  model-building-test.ipynb
data-mining/building-nns/colab-notebooks/: model-building-test.ipynb  neural-boosting.ipynb  stacking-ensemble.ipynb
data-mining/building-nns/local-notebooks/: model-building-test.ipynb  stacking-ensemble.ipynb
data-mining/building-nns/output/stacking-ensemble/: config.pkl  metrics.csv  mlp_a_final.pt  mlp_b_final.pt  results.csv  xgb_final.pkl
data-mining/building-nns/output/vanilla/: best_model.pt  results.csv
data/processed/: scaler.pkl  test.csv  train.csv  val.csv
frontend/: app.py
