[project]
name = "credit-risk-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "protobuf==4.25.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
